[gd_scene load_steps=2 format=3 uid="uid://4hk2cl76inva"]

[ext_resource type="Script" path="res://scenes/liminal.gd" id="1_rxhns"]

[node name="liminal" type="Node2D"]
script = ExtResource("1_rxhns")

[node name="Panel" type="PanelContainer" parent="."]
offset_right = 512.0
offset_bottom = 290.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="player_info" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="next_fight" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Fight again"

[node name="exit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[connection signal="button_up" from="Panel/VBoxContainer/next_fight" to="." method="_on_next_fight_button_up"]
[connection signal="button_up" from="Panel/VBoxContainer/exit" to="." method="_on_exit_button_up"]
